Fixed bug related to device information event routing